--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -3275,11 +3275,17 @@ code {
     .modalForm__title {
       margin: 0 auto;
     }
-
-    img {
+    .modalForm__close {
       height: 18px;
       position: absolute;
-      top: 5px;
+      top: 10px;
+      right: 10px;
+      z-index: 200;
+    }
+    .modalForm__newConversation {
+      height: 18px;
+      position: absolute;
+      top: 10px;
       left: 10px;
       z-index: 200;
     }
